--- a/preview.html
+++ b/preview.html
@@ -13,23 +13,39 @@
 		<meta http-equiv="content-language" content="en">
 		<link type="text/plain" rel="author" href="humans.txt" />
 
-		<!--  SEO -->
 		<title></title>
 		<meta name="description" content="">
 
-		<!--  CSS Files -->
+		<!--  Favicons -->
+		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+		<link rel="icon" href="favicon.png"><!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+		<meta name="msapplication-TileColor" content="#FFC40D">
+		<meta name="msapplication-TileImage" content="mstile.png">
+
+		<!--  CSS -->
 		<link rel="stylesheet" href="lib/styles/css/screen.css" type="text/css">
+		<script src="../lib/js/custom.modernizr.js" type="text/javascript"></script>
+
+		<!-- Make IE place nice with -->
+		<!--[if lt IE 9]>
+			<link rel="stylesheet" href="lib/styles/css/ie.css">
+			<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
+			<script src="//s3.amazonaws.com/nwapi/nwmatcher/nwmatcher-1.2.5-min.js"></script>
+			<script src="//html5base.googlecode.com/svn-history/r38/trunk/js/selectivizr-1.0.3b.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
+		<![endif]-->
+
+		<!-- preview only -->
+		<style type="text/css">
+			.sg_blockgrid {
+				margin: 3px 0;
+				padding: 5px;
+				background: rgba(0,255,255,0.25);
+				border: 1px solid cyan;
+			}
+		</style>
 
 	</head>
-
-	<style type="text/css">
-		.sg_blockgrid {
-			background: rgba(0,255,255,0.2);
-			padding: 10px;
-			margin: 5px 0;
-		}
-	</style>
-
 	<body>
 		
 		<header></header>
