--- a/preview.html
+++ b/preview.html
@@ -223,6 +223,12 @@
 				</div>
 
 				<div class="medium-4 columns">
+					<label for="field--select">Select</label>
+					<select id="field--select">
+						<option>Test</option>
+						<option>Test</option>
+						<option>Test</option>
+					</select>
 					<label for="field--text" class="error">Error</label>
 					<input type="text" id="field--text" placeholder="text" class="error" />
 				</div>
